--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "portofolio1",
+  "name": "portofolio-backend",
   "version": "1.0.0",
-  "description": "portofolio1",
+  "description": "Backend untuk aplikasi portfolio Sulis",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0"
   }
